<resources>
    <string name="app_name">SegundoTrabalho</string>
    <string name="menu">MENU</string>

    <string name="adicionar_objeto">+ ADICIONAR OBJETO</string>
    <string name="editar_objeto">EDITAR OBJETOS</string>
    <string name="listar_objetos">LISTAR OBJETOS</string>
    <string name="sair">SAIR</string>

    <string name="adicionar_tipo">+ ADICIONAR TIPO</string>
    <string name="editar_tipo">EDITAR TIPOS</string>
    <string name="tipo">TIPO</string>
    <string name="descricao">DESCRIÇÃO</string>
    <string name="selecione_tipo">SELECIONE TIPO:</string>
    <string name="nome_funcionario">NOME DO FUNCIONÁRIO</string>

    <string name="salvar">SALVAR</string>
    <string name="cancelar">CANCELAR</string>
    <string name="excluir">EXCLUIR</string>
    <string name="voltar">VOLTAR</string>

    <string name="preencher_campos">Preencha todos os campos</string>


</resources>