<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.EditarTipoActivity">


    <Button
        android:id="@+id/buttonVoltarId"
        android:layout_width="104dp"
        android:layout_height="37dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:onClick="voltarButton"
        android:text="@string/voltar" />


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="20dp"
        android:text="@string/editar_tipo"
        android:textSize="35sp" />

    <EditText
        android:id="@+id/textTipoValueId"
        android:layout_width="242dp"
        android:layout_height="43dp"
        android:layout_marginStart="32dp"
        android:hint="@string/tipo" />

    <EditText
        android:id="@+id/textDescricaoValueId"
        android:layout_width="242dp"
        android:layout_height="47dp"
        android:layout_marginStart="32dp"
        android:hint="@string/descricao" />

    <TextView
        android:id="@+id/textViewError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Preencha todos os campos"
        android:textColor="@color/red"
        android:layout_marginLeft="30dp"
        android:visibility="gone" />

    <Button
        android:id="@+id/buttonAdicionar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="20dp"
        android:onClick="adicionarTipo"
        android:text="@string/adicionar_tipo" />

    <ListView
        android:id="@+id/listViewTipos"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:divider="@android:color/darker_gray"
        android:dividerHeight="1dp" />

</LinearLayout>