<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.ListarObjetosActivity">

    <Button
        android:id="@+id/buttonVoltarId"
        android:layout_width="122dp"
        android:layout_height="41dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:onClick="voltarButton"
        android:text="@string/voltar" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="22dp"
        android:text="@string/listar_objetos"
        android:textSize="35sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="34dp"
        android:layout_marginBottom="13dp"
        android:text="@string/selecione_tipo"
        android:textSize="20sp" />

    <Spinner
        android:id="@+id/spinnerTipos"
        android:layout_width="204dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="34dp"
        android:entries="@array/tipos_array"
        android:textSize="30sp" />

    <Button
        android:id="@+id/buttonBuscar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="Buscar"
        android:onClick="buscarObjetos" />

    <ListView
        android:id="@+id/listViewObjetos"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:textSize="18sp"
        android:layout_weight="1" />
</LinearLayout>
