<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.EditacaoObjetoActivity">

    <Button
        android:id="@+id/buttonSalvar"
        android:layout_width="130dp"
        android:layout_height="54dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="160dp"
        android:onClick="atualizarObjeto"
        android:text="@string/salvar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@id/buttonCancelar"
        app:layout_constraintTop_toBottomOf="@+id/editTextNomeFuncionario" />

    <Button
        android:id="@+id/buttonCancelar"
        android:layout_width="134dp"
        android:layout_height="56dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="160dp"
        android:onClick="voltarButton"
        android:text="@string/cancelar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNomeFuncionario" />

    <TextView
        android:id="@+id/textViewEditarObjeto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:text="EDITAR OBJETO"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.598"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutNomeFuncionario"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="267dp">

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editTextNomeFuncionario"
        android:layout_width="340dp"
        android:layout_height="60dp"
        android:layout_marginTop="212dp"
        android:hint="@string/nome_funcionario"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.394"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewEditarObjeto" />

    <TextView
        android:id="@+id/textViewErrorEditacaoObjeto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/preencher_campos"
        android:textColor="@color/red"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.116"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNomeFuncionario" />


</androidx.constraintlayout.widget.ConstraintLayout>
